<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/dialog"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:hint="Enter name"
        android:maxLines="1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtName"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:hint="Enter age"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtAge"
        android:layout_margin="10dp"
        android:text="Add" />
</RelativeLayout>