<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/dialogUserDetails"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
...
        android:background="@android:color/holo_red_light">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/imvClose"
            android:layout_toStartOf="@+id/imvClose"
            android:gravity="center"
            android:text="User Details"
            android:textSize="22dp" />

        <ImageView
...
